[project]
name = "rag-ingestor"
version = "0.1.0"
description = "RAG application with FastAPI, llama-index, and Qdrant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=0.19.0",
    "huggingface-hub[inference]>=0.30.2",
    "llama-index>=0.12.32",
    "llama-index-embeddings-huggingface>=0.5.3",
    "python-multipart>=0.0.20",
    "syft-event>=0.2.0",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/rag_ingestor"]
